<resources>

    <!-- Generic Organizer strings -->
    <string name="app_name">Organizer</string>
    <string name="module1_name">Reminder</string>
    <string name="module2_name">Focus</string>
    <string name="module3_name">Notable</string>
    <string name="module4_name">Timer</string>
    <string name="module5_name">Checker</string>
    <string name="app_settings">Settings</string>
    <string name="app_usage">Help</string>
    <!-- TODO give these real values-->
    <string name="nav_header_title">Organizer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cancel_action">Cancel</string>
    <string name="confirm_deletion">Delete</string>

    <!-- Focus-specific strings -->
    <!-- Intra-module navigation -->
    <string name="focus_settings_item">Focus Settings</string>
    <string name="focus_active_item">Active Tasks</string>
    <string name="focus_backlog_item">Task Backlog</string>
    <string name="focus_completed_item">Completed Tasks</string>
    <string name="focus_how_to_use">How to Use</string>
    <string name="focus_search_tasks">Search Tasks</string>
    <string name="focus_clear_tasks">Delete All</string>

    <!-- Task actions -->
    <string name="focus_move_to_active">Move To Active</string>
    <string name="focus_delete_task">Delete Task</string>
    <string name="focus_move_to_backlog">Move to Backlog</string>
    <string name="focus_move_to_burner">Move to Backburner</string>
    <string name="focus_complete_task">Complete Task</string>
    <string name="focus_add_task">Add Task</string>
    <string name="focus_add_new_task">Add New Task</string>
    <string name="focus_delete_task_prompt">Are you sure you want to delete?</string>
    <string name="focus_clear_tasks_prompt">Are you sure you want to clear all displayed tasks?</string>

    <!-- Task attributes -->
    <string name="focus_id_code_hint">ID Code</string>
    <string name="focus_desc_hint">Brief Task Description</string>
    <string name="focus_perc_hint">Percentage Done</string>
    <string name="focus_perc_done_format">%1$.2f</string>
</resources>
